--- a/PersonalWebsite/MyBlog/blog.html
+++ b/PersonalWebsite/MyBlog/blog.html
@@ -200,26 +200,69 @@
                 first time riding a light rail) and then moved over here to Minnesota (first time in Minnesota) where I work as a tech member on the tax software that the state of Minnesota uses 
                 (and no, I do not do taxes, I’m just working on maintaining and upgrading the software).  This is my first full-time, non-intern job, and it is going as well as can be expected, 
                 and thankfully all my coworkers are super nice.  In fact, one of them invited me over to his family’s thanksgiving (first time not attending a Thanksgiving dinner with my family) which I did end up going to!
-I had a few misconceptions about Minnesota from living in Oregon for so long, but I can say that Minnesota is a lot like Oregon, just a bit colder and with a more diverse population of people (which is honestly so cool to see the many different cultures!).  
-For my first two weeks here in Minnesota, I used a 2019 KIA Soul which had lane assist – which is my first time using that! I have already been doing a lot of driving around in snow (thankfully my first car (2014 Subaru Crosstrek) that I bought over here has all-wheel drive!).  
-Oh, and Minnesota doesn’t have gas station attendants, so I had to pump gas for the first time for myself! Also, it’s VERY snowy and cold over here, so that’s another first: driving at night when it’s snowing! 
-Where I live in St. Paul there are at least four massive malls within easy driving distance and as many restaurants, grocery stores, and random other things that anyone could ever need.  
-By the way, I found an apartment (first time living in one) in a massive, four-building, 460 apartment complex.  I guess another first has been paying utility bills and allowing the government to take criminal amounts of taxes from my paychecks. 
-With this monstrous transition has come lots of exciting and fun stuff like visiting the Mall of America for the first time, going to a massive Halloween festival farm where I completed a corn maze for the first time by myself and saw water buffalo for the first time.  
-I was also about to go to a bow range for the first time and shoot some arrows (no I didn’t injure anyone or myself).  I was also able to attend two Halloween parties (first time doing that by myself!) and dressed up as a Viking in honor of the Minnesota Vikings professional football team.  
-I also went to two different bars for the first time as my work always has its meet-ups at bars.  I’m going to be honest with you, I felt super uncomfortable for both, but I made it through (and no, I didn’t drink anything!). 
-At the beginning of August, I was able to fly to Washington and meet up with my older sister Kenzie for a business convention (unrelated to my new job) which was a ton of fun.
-I also made it a priority to plug into a church as soon as possible, and I found an awesome church (first time going to a church by myself) that is only a five-minute drive away from my apartment, called Resurrection City Church.  
-After a few months, I became an official member (first time becoming an official church member) and am now part of a community group within the church and regularly attend on Sundays as well.  
-I have really enjoyed getting to know the members of this community group, and I hope that I can continue to engage with other members of the church.  It has been a good year for growing closer to God with all this new stuff and having to rely on Him, but that’s good; relying on God more than myself is something that is important for me!
-Other than my weekend in Washington with Kenzie, I have not seen in-person any of my family and relatives, which has been a bit hard, but not nearly as bad as I thought (which is a first to be gone from my family for more than a month, but luckily I have been showing no signs of home sickness).  
-It has been a massive blessing for some of my friends and relatives to call and zoom me, and I do hope that you will continue to stay in contact with me! If you would like to pray for me, I would love some prayer that I would:
-<ul>
-    <li> Be able to continue to connect with church members over here and find some Christian friends that I could also connect with. </li>
-    <li> Stay safe and healthy (although Minnesota has great medical services everywhere) </li>    
-</ul>
+                I had a few misconceptions about Minnesota from living in Oregon for so long, but I can say that Minnesota is a lot like Oregon, just a bit colder and with a more diverse population of people (which is honestly so cool to see the many different cultures!).  
+                For my first two weeks here in Minnesota, I used a 2019 KIA Soul which had lane assist – which is my first time using that! I have already been doing a lot of driving around in snow (thankfully my first car (2014 Subaru Crosstrek) that I bought over here has all-wheel drive!).  
+                Oh, and Minnesota doesn’t have gas station attendants, so I had to pump gas for the first time for myself! Also, it’s VERY snowy and cold over here, so that’s another first: driving at night when it’s snowing! 
+                Where I live in St. Paul there are at least four massive malls within easy driving distance and as many restaurants, grocery stores, and random other things that anyone could ever need.  
+                By the way, I found an apartment (first time living in one) in a massive, four-building, 460 apartment complex.  I guess another first has been paying utility bills and allowing the government to take criminal amounts of taxes from my paychecks. 
+                With this monstrous transition has come lots of exciting and fun stuff like visiting the Mall of America for the first time, going to a massive Halloween festival farm where I completed a corn maze for the first time by myself and saw water buffalo for the first time.  
+                I was also about to go to a bow range for the first time and shoot some arrows (no I didn’t injure anyone or myself).  I was also able to attend two Halloween parties (first time doing that by myself!) and dressed up as a Viking in honor of the Minnesota Vikings professional football team.  
+                I also went to two different bars for the first time as my work always has its meet-ups at bars.  I’m going to be honest with you, I felt super uncomfortable for both, but I made it through (and no, I didn’t drink anything!). 
+                At the beginning of August, I was able to fly to Washington and meet up with my older sister Kenzie for a business convention (unrelated to my new job) which was a ton of fun.
+                I also made it a priority to plug into a church as soon as possible, and I found an awesome church (first time going to a church by myself) that is only a five-minute drive away from my apartment, called Resurrection City Church.  
+                After a few months, I became an official member (first time becoming an official church member) and am now part of a community group within the church and regularly attend on Sundays as well.  
+                I have really enjoyed getting to know the members of this community group, and I hope that I can continue to engage with other members of the church.  It has been a good year for growing closer to God with all this new stuff and having to rely on Him, but that’s good; relying on God more than myself is something that is important for me!
+                Other than my weekend in Washington with Kenzie, I have not seen in-person any of my family and relatives, which has been a bit hard, but not nearly as bad as I thought (which is a first to be gone from my family for more than a month, but luckily I have been showing no signs of home sickness).  
+                It has been a massive blessing for some of my friends and relatives to call and zoom me, and I do hope that you will continue to stay in contact with me! If you would like to pray for me, I would love some prayer that I would:
+                <ul>
+                    <li> Be able to continue to connect with church members over here and find some Christian friends that I could also connect with. </li>
+                    <li> Stay safe and healthy (although Minnesota has great medical services everywhere) </li>    
+                </ul>
             </p>
-        </article>        
+        </article>   
+        <article id="2023">
+            <h2>2023 Highlights</h2>
+            <p>
+                <h3>Another Year, another Wild Ride</h3>
+                <p>
+                It is crazy to me how another year has passed already. Now, if you are a connoisseur of Christmas newsletters, then it may seem like most newsletters say that, but here’s the thing. It’s so true! As someone who has a strangely good memory of my younger years (maybe because I am still relatively young…), I can honestly say that time travels slower.  Apparently, it’s a thing. Supposedly, we process less information as we get older and hence time appears to go faster.  I remember waiting endlessly for birthdays and Christmas as a young boy, and now, they come so fast that I do not even have enough time to prepare. I have found myself having to meticulously record events and plan well ahead of time for even a hope of getting things done.  With that said, having a full-time job has shrunk the amount of time that I can choose to spend how I want, and thus my schedule seems more packed and busier than it used to be.  It’s because of this that I have had to specifically block out time in my schedule to do things like exercise, spend time with God, and just chill out for a bit. Thankfully, unlike last year where I moved over here to St. Paul, Minnesota, this year has been more of a routine, and I have been able to calm down just a little bit more. However, that’s not to say that I haven’t been getting around!
+                </p>
+                <h3>Good Stuff!</h3>
+                <p>
+                <ul>
+                    <li>I have found that I really enjoy ice skating. Now that I have some nice skates, and since there is free ice skating in the Twin Cities, I get to spend some evenings by putting my life on the line on top of ice. Granted, I am a very bad ice skater since I had only ever skated once in the first decade of my life, but it’s a lot of fun and a great way to get exercise without really feeling like you are exercising. </li>
+                    <li>I got to go on a pontoon trip with friends on a lake over here in the twin cities! Prior to this, I had never really been on any free-roaming boat before on a lake this large or gone swimming in anything but a pool.</li>
+                    <li>I was able to visit Valley Fair which is a moderately sized amusement park in the area. I literally spent an entire day there and was able to spike my levels of adrenaline through the roof.</li>
+                    <li>I was blessed to be able to visit my family in Oregon twice this year. The first involved a competitive, and close game of badminton with my sister Kirsten and I playing against my parents. (Yes, we ultimately prevailed). The second involved me going back to the University of Oregon to help with recruiting for my company – FAST Enterprises!</li>
+                    <li>I got to travel to Chicago, Illinois and visit the Chicago History Museum, Willis Tower, and participate in a colossal party at Second City.</li>
+                    <li>Was able to attend a friends’ wedding which was a ton of fun!</li>
+                    <li>I got to do some other firsts like rock climbing, kayaking, going to a water lantern festival, watching the Aquatennial, do some pro go-kart racing, and attend a Minnesota Loons professional soccer game (vs. a German team coincidentally named Kaiserslautern) </li>
+                    <li>My parents and sister Kailey came over to visit me in Minnesota. We had a blast!</li>
+                    <li>NO SCHOOL! I can’t tell you how nice it is to not be in school for the first time in literally forever.</li>
+                    <li>I got to go to an awesome church retreat with members of Resurrection City Church! I even got to do some laser tag there.</li>
+                </ul>        
+                </p>
+                <h3>Bad Stuff!</h3>
+                <p>
+                    Now, before you go marveling about how amazing my year was, I thought it would be interesting to outline some of the more unfortunate things that also happened this year.
+                <ul>
+                    <li>My faucet and window both sprang water leaks, and they both occurred at night…</li>
+                    <li>I started running again and discovered, much to my horror, that I could only run a third of the distance and half of the speed I used to be able to (which was definitely a hit to my ego).</li>
+                    <li>I didn’t get any sort of summer break. (It was a nice introduction to full-time working)</li>
+                    <li>I accidentally sent an email to 2,000+ people.</li>
+                    <li>My car’s VVT (Subaru’s version of the OCV for all you car lovers) got clogged with oil and had to get replaced (wasn’t cheap) and then I somehow got a nail in my car’s tire and had to get that fixed too.</li>
+                    <li>Locked myself out of my apartment</li>
+                    <li>Did some axe throwing and realized I should not be trusted with an axe (mostly because I cannot throw it accurately to save my life)</li>
+                    <li>Annoyed my downstairs neighbor because I walk too loudly in my apartment</li>
+                    <li>Made a neighbor mad because I can’t park</li>
+                    <li>Missed all my extended family’s important events like birthdays, holidays, and the family reunion</li>
+                    Even with all the very unfortunate stuff that happened to me this year, I fully realize it is all part of life, and I know God has me where I need to be. I hope that you never take for granted your family and spending time with them like I, sadly, have in the past.  You never know what may happen. However, dare I say, I am enjoying Minnesota and the new friends and adopted family I am making over here.   So, to all of you who have helped, supported, and provided friendship and advice this year, have a pat on the back!
+                    As I look towards the light at the end of the train tunnel and realize it’s just 2024’s headlight, I am taking time to consider my goals, my dreams, and my values and really asking myself if I am truly living them out.  The answers can be discouraging, but with God at the helm, I am excited to see what I can accomplish in 2024.  
+
+                </ul>        
+                </p>
+            </p>
+        </article>     
     </section>
     <aside>        
         <article>            
@@ -236,6 +279,7 @@ It has been a massive blessing for some of my friends and relatives to call and 
                 <li><a href="#2020">2020 Highlights</a></li>   
                 <li><a href="#2021">2021 Highlights</a></li>  
                 <li><a href="#2022">2022 Highlights</a></li>  
+                <li><a href="#2023">2022 Highlights</a></li>  
                 <li><a href="#buckGeneralContracting">Buck General Contracting</a></li>          
             </ul>         
         </article> 
